--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,48 +8,47 @@
   = @product.shop_name
 #content
   #deal-intro.cf
-    .clearfix.discountDetailsWrap
-      .floatLeft
-        .discountContentWrap#discountContent
-          .globalTitle
-            %h1.title 上岛咖啡，单点消费享全场9折
-          .discountInfoWrap.clearfix
-            .discountInfoLSide.floatLeft
-              %ul.infoImgSilde
-                %li
-                  %a{:href=>"#"}
-                    %img.img{:src=>"/assets/coffee.jpg", :height=>"195", :width=>"260"}
-            .discountInfoRSide.floatLeft
-              %ul
-                %li.listCol
-                  %label.floatLeft 打折时间：
-                  .floatLeft.fRSide
-                    %span#discount_time 2012年11月17日至2013年01月13日 
-                %li.listCol.clearfix
-                  %label.floatLeft 折扣范围：
-                  .floatLeft.fRSide
-                    %span.discountNum 9.0
-                    折
-                %li.listCol.clearfix
-                  %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
-                  .floatLeft.fRSide
-                    %span#discount_addr 北京市海淀区中关村南大街12号东方天作商城1楼北区
-                %li.listCol.clearfix
-                  %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
-                  .floatLeft.fRSide
-                    %span#discount_phone 82101245
-                %li.listCol.clearfix
-                  %label.floatLeft 用户印象：
-                  .floatLeft.fRSide
-                    %span#rate 暂无
-                %li.listCol.clearfix
-                  %a{:href=>"#"}
-                    %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
-        .discountDetailsInfo
-          %h2.title 详细信息
-          %p &nbsp;&nbsp;&nbsp;&nbsp;上岛咖啡单点消费享全场9折，农科院内的天作国际商城首层北区，店营业伊始，店内隆重而温馨。各款饮食出品，可口美味，物有超值。相信您能尽兴而来，满意而归。相聚于典雅与温馨之间，端坐在于豪华之堂，品味到卡布基诺咖啡的纯香，观摩着后现代画家的艺术精品与杰作，融合在这人生的超佳境界，您能体会到不一样的上岛咖啡和不一样的精致文化的人生，您将会流连忘返。
-          %p &nbsp;&nbsp;&nbsp;&nbsp;电话：82101245
-          %p &nbsp;&nbsp;&nbsp;&nbsp;地址：北京市海淀区中关村南大街12号东方天作商城1楼北区
+    .clearfix.floatLeft
+      .discountContentWrap#discountContent
+        .globalTitle
+          %h1.title 上岛咖啡，单点消费享全场9折
+        .discountInfoWrap.clearfix
+          .discountInfoLSide.floatLeft
+            %ul.infoImgSilde
+              %li
+                %a{:href=>"#"}
+                  %img.img{:src=>"/assets/coffee.jpg", :height=>"195", :width=>"260"}
+          .discountInfoRSide.floatLeft
+            %ul
+              %li.listCol
+                %label.floatLeft 打折时间：
+                .floatLeft.fRSide
+                  %span#discount_time 2012年11月17日至2013年01月13日 
+              %li.listCol.clearfix
+                %label.floatLeft 折扣范围：
+                .floatLeft.fRSide
+                  %span.discountNum 9.0
+                  折
+              %li.listCol.clearfix
+                %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
+                .floatLeft.fRSide
+                  %span#discount_addr 北京市海淀区中关村南大街12号东方天作商城1楼北区
+              %li.listCol.clearfix
+                %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
+                .floatLeft.fRSide
+                  %span#discount_phone 82101245
+              %li.listCol.clearfix
+                %label.floatLeft 用户印象：
+                .floatLeft.fRSide
+                  %span#rate 暂无
+              %li.listCol.clearfix
+                %a{:href=>"#"}
+                  %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
+      .discountDetailsInfo
+        %h2.title 详细信息
+        %p &nbsp;&nbsp;&nbsp;&nbsp;上岛咖啡单点消费享全场9折，农科院内的天作国际商城首层北区，店营业伊始，店内隆重而温馨。各款饮食出品，可口美味，物有超值。相信您能尽兴而来，满意而归。相聚于典雅与温馨之间，端坐在于豪华之堂，品味到卡布基诺咖啡的纯香，观摩着后现代画家的艺术精品与杰作，融合在这人生的超佳境界，您能体会到不一样的上岛咖啡和不一样的精致文化的人生，您将会流连忘返。
+        %p &nbsp;&nbsp;&nbsp;&nbsp;电话：82101245
+        %p &nbsp;&nbsp;&nbsp;&nbsp;地址：北京市海淀区中关村南大街12号东方天作商城1楼北区
 
 #sidebar
   .side-single
