delete useless css

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -32,15 +32,15 @@
               %li.listCol.clearfix
                 %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
                 .floatLeft.fRSide
-                  %span#discount_addr 北京市海淀区中关村南大街12号东方天作商城1楼北区
+                  %span 北京市海淀区中关村南大街12号东方天作商城1楼北区
               %li.listCol.clearfix
                 %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
                 .floatLeft.fRSide
-                  %span#discount_phone 82101245
+                  %span 82101245
               %li.listCol.clearfix
                 %label.floatLeft 用户印象：
                 .floatLeft.fRSide
-                  %span#rate 暂无
+                  %span 暂无
               %li.listCol.clearfix
                 %a{:href=>"#"}
                   %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
