delete useless css

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -9,7 +9,7 @@
 #content
   #deal-intro.cf
     .clearfix.floatLeft
-      .discountContentWrap#discountContent
+      .discountContentWrap
         .globalTitle
           %h1.title 上岛咖啡，单点消费享全场9折
         .discountInfoWrap.clearfix
@@ -44,11 +44,14 @@
               %li.listCol.clearfix
                 %a{:href=>"#"}
                   %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
-      .discountDetailsInfo
-        %h2.title 详细信息
-        %p &nbsp;&nbsp;&nbsp;&nbsp;上岛咖啡单点消费享全场9折，农科院内的天作国际商城首层北区，店营业伊始，店内隆重而温馨。各款饮食出品，可口美味，物有超值。相信您能尽兴而来，满意而归。相聚于典雅与温馨之间，端坐在于豪华之堂，品味到卡布基诺咖啡的纯香，观摩着后现代画家的艺术精品与杰作，融合在这人生的超佳境界，您能体会到不一样的上岛咖啡和不一样的精致文化的人生，您将会流连忘返。
-        %p &nbsp;&nbsp;&nbsp;&nbsp;电话：82101245
-        %p &nbsp;&nbsp;&nbsp;&nbsp;地址：北京市海淀区中关村南大街12号东方天作商城1楼北区
+  #deal-intro.cf
+    .clearfix.floatLeft
+      .discountContentWrap
+        .discountDetailsInfo
+          %h2.title 详细信息
+          %p &nbsp;&nbsp;&nbsp;&nbsp;上岛咖啡单点消费享全场9折，农科院内的天作国际商城首层北区，店营业伊始，店内隆重而温馨。各款饮食出品，可口美味，物有超值。相信您能尽兴而来，满意而归。相聚于典雅与温馨之间，端坐在于豪华之堂，品味到卡布基诺咖啡的纯香，观摩着后现代画家的艺术精品与杰作，融合在这人生的超佳境界，您能体会到不一样的上岛咖啡和不一样的精致文化的人生，您将会流连忘返。
+          %p &nbsp;&nbsp;&nbsp;&nbsp;电话：82101245
+          %p &nbsp;&nbsp;&nbsp;&nbsp;地址：北京市海淀区中关村南大街12号东方天作商城1楼北区
 
 #sidebar
   .side-single
