finish homepage coupon list view

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -23,7 +23,7 @@
               %li.listCol
                 %label.floatLeft 打折时间：
                 .floatLeft.fRSide
-                  %span#discount_time 2012年11月17日至2013年01月13日 
+                  %span 2012年11月17日至2013年01月13日 
               %li.listCol.clearfix
                 %label.floatLeft 折扣范围：
                 .floatLeft.fRSide
