--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -1,40 +1,35 @@
 #filter
   #deal-intro.cf
-    .clearfix.discountDetailsWrap
+    .clearfix
       - (0..3).each do ||
-        .discountContentWrap#discountContent
-          .discountInfoWrap.clearfix
-            .discountInfoLSide.floatLeft
+        .couponContentWrap
+          .couponInfoWrap.clearfix
+            .couponInfoLSide.floatLeft
               %ul.infoImgSilde
                 %li
                   %a{:href=>"#"}
                     %img.img{:src=>"/assets/coffee.jpg", :height=>"195", :width=>"260"}
-            .discountInfoRSide.floatLeft
+            .couponInfoRSide.floatLeft
+              .globalTitle
+                %h1.title 上岛咖啡，单点消费享全场9折
               %ul
-                %li.listCol
-                  .globalTitle
-                    %h1.title 上岛咖啡，单点消费享全场9折
                 %li.listCol
                   %label.floatLeft 打折时间：
                   .floatLeft.fRSide
-                    %span#discount_time 2012年11月17日至2013年01月13日 
+                    %span 2012年11月17日至2013年01月13日 
                 %li.listCol.clearfix
                   %label.floatLeft 折扣范围：
                   .floatLeft.fRSide
-                    %span.discountNum 9.0
+                    %span.couponNum 9.0
                     折
                 %li.listCol.clearfix
                   %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
                   .floatLeft.fRSide
-                    %span#discount_addr 北京市海淀区中关村南大街12号东方天作商城1楼北区
+                    %span 北京市海淀区中关村南大街12号东方天作商城1楼北区
                 %li.listCol.clearfix
                   %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
                   .floatLeft.fRSide
-                    %span#discount_phone 82101245
-                %li.listCol.clearfix
-                  %label.floatLeft 用户印象：
-                  .floatLeft.fRSide
-                    %span#rate 暂无
+                    %span 82101245
                 %li.listCol.clearfix
                   %a{:href=>"#"}
                     %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
