--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -1,36 +1,34 @@
 #filter
   #deal-intro.cf
     .clearfix
-      - (0..3).each do ||
+      - @products.each do |product|
         .couponContentWrap
           .couponInfoWrap.clearfix
             .couponInfoLSide.floatLeft
               %ul.infoImgSilde
                 %li
-                  %a{:href=>"#"}
-                    %img.img{:src=>"/assets/coffee.jpg", :height=>"195", :width=>"260"}
+                  = link_to image_tag( "/assets/coffee.jpg", :width => "260", :height => "195", :title => "点击查看详情", :alt => product.title ), product_path(product), { :target => "_blank" }
             .couponInfoRSide.floatLeft
-              .globalTitle
-                %h1.title 上岛咖啡，单点消费享全场9折
+              .globalTitle.title
+                = link_to product.title, product_path(product), { :target => "_blank" }
               %ul
                 %li.listCol
                   %label.floatLeft 打折时间：
                   .floatLeft.fRSide
-                    %span 2012年11月17日至2013年01月13日 
+                    %span= "#{product.begin_at.strftime('%Y年%m月%d日')}至#{product.end_at.strftime('%Y年%m月%d日')}"
                 %li.listCol.clearfix
                   %label.floatLeft 折扣范围：
                   .floatLeft.fRSide
-                    %span.couponNum 9.0
+                    %span.couponNum= product.discount
                     折
                 %li.listCol.clearfix
                   %label.floatLeft 地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
                   .floatLeft.fRSide
-                    %span 北京市海淀区中关村南大街12号东方天作商城1楼北区
+                    %span= product.address
                 %li.listCol.clearfix
                   %label.floatLeft 电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话：
                   .floatLeft.fRSide
-                    %span 82101245
+                    %span= product.phone
                 %li.listCol.clearfix
-                  %a{:href=>"#"}
-                    %img.img{:src=>"/assets/shop_now_c.jpg", :height=>"44", :width=>"130"}
+                  = link_to "去看看", product_path(product), { :target => "_blank", :hidefocus=>"true", :class=>"button", :rel=>"nofollow" }
 
