--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -6,27 +6,29 @@
       %table#order-list.coupons-table{:cellpadding=>"0", :cellspacing=>"0", :border=>"0"}
         %tr
           %th{:width=>"auto"} 编号
-          %th{:width=>"60"} 封面名称
-          %th{:width=>"60"} 商家名称
-          %th{:width=>"60"} 分类
-          %th{:width=>"60"} 区域
-          %th{:width=>"60"} 销售价格
-          %th{:width=>"60"} 市场价格
-          %th{:width=>"60"} 销售数量
-          %th{:width=>"60"} 结束时间
-          %th{:width=>"112"} 操作
+          %th{:width=>"50"} 名称
+          %th{:width=>"50"} 折扣
+          %th{:width=>"50"} 分类
+          %th{:width=>"50"} 区域
+          %th{:width=>"50"} 开始
+          %th{:width=>"50"} 结束
+          %th{:width=>"50"} 地址
+          %th{:width=>"50"} 电话
+          %th{:width=>"50"} 卖出
+          %th{:width=>"120"} 操作
 
         - @products.each do |product|
           %tr{:class => cycle("alt", "")}
             %td= product.id
-            %td= product.cover_name
-            %td= product.shop_name
+            %td= product.title
+            %td= product.discount
             %td= product.category.cn_name
             %td= product.district.cn_name
-            %td= product.sale_price
-            %td= product.original_price
+            %td= product.begin_at.strftime('%Y年%m月%d日')
+            %td= product.end_at.strftime('%Y年%m月%d日')
+            %td= product.address
+            %td= product.phone
             %td= product.sale_count
-            %td= product.overtime_at
             %td
               - #使用前台的products/show显示
               = link_to "显示", product_path(product), { :target => "_blank" }
