--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -48,9 +48,9 @@
       .discountContentWrap
         .discountDetailsInfo
           %h2.title 详细信息
-          %p= @product.content.html_safe
-          %p= "电话：#{@product.phone}"
-          %p= "地址：#{@product.address}"
+          %p= "&nbsp;&nbsp;&nbsp;&nbsp;#{@product.content}".html_safe
+          %p= "&nbsp;&nbsp;&nbsp;&nbsp;电话：#{@product.phone}".html_safe
+          %p= "&nbsp;&nbsp;&nbsp;&nbsp;地址：#{@product.address}".html_safe
 
 #sidebar
   .side-single
