--- a/app/views/filters/district.html.haml
+++ b/app/views/filters/district.html.haml
@@ -1,3 +1,4 @@
+- provide(:title, "吉林#{filter_title(action_name, params[:id])}打折优惠信息")
 = render "filters/filter"
 = render "products/index"
 #sidebar
