modify icon in browser

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,9 +28,7 @@
   %p.time 周一到周日8:00-22:00
 .copyright
   %p
-    ©
-    %span{:title=>"I:3; Q:7; S:4; C:36; F:0; T:173.32; H:e18"} 2012
-    startup.com
+    ©2012 吉林美打折网 jilinmei.com
     京ICP证100001号 京公网安备100000000001号
 %div{:style=>"display:none"}
   %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
