--- a/app/views/coupons/_subbar.html.haml
+++ b/app/views/coupons/_subbar.html.haml
@@ -5,4 +5,11 @@
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
     = link_to "全部", coupons_path
-
+  %li{:class => (action_name == "filter" ? "current" : nil)}
+    = link_to "未使用", "#"
+  %li{:class => (action_name == "filter" ? "current" : nil)}
+    = link_to "即将到期", "#"
+  %li{:class => (action_name == "filter" ? "current" : nil)}
+    = link_to "已使用", "#"
+  %li{:class => (action_name == "filter" ? "current" : nil)}
+    = link_to "已过期", "#"
