--- a/app/views/coupons/index.html.haml
+++ b/app/views/coupons/index.html.haml
@@ -1,23 +1,28 @@
 - provide(:title, "我的优惠券")
 #content.coupons-box
   = render "shared/dashboard"
-  .mainbox.mine
+  .mainbox.mine#orders
     = render "subbar"
     %table#order-list.coupons-table{:cellpadding=>"0", :cellspacing=>"0", :border=>"0"}
       %tr
         %th{:width=>"auto"} 优惠券
-        %th{:width=>"100"} 状态
-        %th{:width=>"100"} 密码
-        %th{:width=>"100"} 操作
+        %th{:width=>"50"} 状态
+        %th{:width=>"160"} 密码
+        %th{:width=>"60"} 操作
       - @coupons.each do |coupon|
         %tr{:class => cycle("alt", "")}
-          %td= coupon.product.title
-          %td= coupon.status
-          %td= coupon.password
+          %td.deal
+            %table.deal-info
+              %tr
+                %td.pic
+                  = link_to image_tag(coupon.product.image_url(:thumb), :width=>"75", :height=>"56"), product_path(coupon.product), {:target=>"_blank"}
+                %td.text
+                  = link_to coupon.product.title, product_path(coupon.product), {:class=>"deal-title", :target=>"_blank"}
+          %td= coupon.status==0 ? "未使用":"已使用"
+          %td.unpay= coupon.password
           %td
-            = link_to "编辑", "#"
-            | 
-            = link_to "删除", "#"
+            = link_to "发送短信", "#"
+            = link_to "不想要了", "#"
 
 #sidebar
 
