--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -55,20 +55,12 @@
 
 #sidebar
   .side-single
-    #mapbox
+    #mapbox{"data-latitude"=>@product.pos_x, "data-longitude"=>@product.pos_y}
     = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
+    = javascript_include_tag "mapbox"
     :javascript
-      var map = new BMap.Map("mapbox");
-      var point = new BMap.Point(126.507328, 43.825834);
+      showMapBox();
 
-      var marker1 = new BMap.Marker(new BMap.Point(126.507328, 43.825834));
-      map.addOverlay(marker1);
-
-      var infoWindow1 = new BMap.InfoWindow("利群超市");
-      marker1.addEventListener("click", function(){this.openInfoWindow(infoWindow1);});
-
-      map.centerAndZoom(point,15);
-      map.enableScrollWheelZoom();
     #maplink
       查看大图
 
