move couponmap to js file

--- a/app/views/home/_map.html.haml
+++ b/app/views/home/_map.html.haml
@@ -1,27 +1,10 @@
 #filter
   #couponmap
   = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
+  = javascript_include_tag "couponmap"
   :javascript
-    var map = new BMap.Map("couponmap");
+    showCouponMap();
 
-    var marker1 = new BMap.Marker(new BMap.Point(126.507328, 43.825834));
-    map.addOverlay(marker1);
-    var infoWindow1 = new BMap.InfoWindow("利群超市");
-    marker1.addEventListener("click", function(){this.openInfoWindow(infoWindow1);});
-
-    var marker2 = new BMap.Marker(new BMap.Point(126.510998, 43.827587));
-    map.addOverlay(marker2);
-    var infoWindow2 = new BMap.InfoWindow("东北电力大学老校区");
-    marker2.addEventListener("click", function(){this.openInfoWindow(infoWindow2);});
-
-    var marker2 = new BMap.Marker(new BMap.Point(126.518292, 43.829964));
-    map.addOverlay(marker2);
-    var infoWindow2 = new BMap.InfoWindow("东北电力大学新校区");
-    marker2.addEventListener("click", function(){this.openInfoWindow(infoWindow2);});
-  
-    var point = new BMap.Point(126.510998, 43.827587);
-    map.centerAndZoom(point,16);
-    map.enableScrollWheelZoom();
   #maplink
     优惠地图
 
