--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -13,7 +13,7 @@
   %h3 商务合作
   %ul
     %li= link_to "提供优惠信息", "/feedback/seller"
-    %li= link_to "市场合作", "/about#contact"
+    %li= link_to "验证优惠券", checkcoupon_path
     %li= link_to "管理后台", admin_products_path
 .ftbox
   %h3 公司信息
