--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,24 +1,23 @@
 #site-top.cf
   %h1= link_to image_tag("/assets/logo.png", :width=>"108", :height=>"66", :title=>"天天优惠", :alt=>"天天优惠"), "/"
-  .site-info
-    %ul
-      %li= link_to "邮件订阅", "/subscribe", {:class=>"subscribe"}
-      %li= link_to "加入收藏夹", "javascript:void(0);", {:class=>"fav", :id=>"favorite"}
-      %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
-      %li= link_to "常见问题", "/faq", {:class=>"last"}
-  .search.cf
-    %form{:action=>"/s/", :name=>"searchForm", :method=>"get"}
-      %input.s-text{:name=>"w", :autocomplete=>"off", :placeholder=>"请输入商品名称、地址等", :type=>"text"}
-      %input.s-submit{:hidefocus=>"true", :value=>"搜索", :type=>"submit"}
+  /.site-info
+  /  %ul
+  /    %li= link_to "邮件订阅", "/subscribe", {:class=>"subscribe"}
+  /    %li= link_to "加入收藏夹", "javascript:void(0);", {:class=>"fav", :id=>"favorite"}
+  /    %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
+  /    %li= link_to "常见问题", "/faq", {:class=>"last"}
+  /.search.cf
+  /  %form{:action=>"/s/", :name=>"searchForm", :method=>"get"}
+  /    %input.s-text{:name=>"w", :autocomplete=>"off", :placeholder=>"请输入商品名称、地址等", :type=>"text"}
+  /    %input.s-submit{:hidefocus=>"true", :value=>"搜索", :type=>"submit"}
 .site-nav
   .nav-wrapper.cf
     %ul.nav
-      %li= link_to "今日优惠", "/", {:class=>"hover"}
-      %li= link_to "美食", "/meishi/all"
-      %li= link_to "娱乐", "/yule/all"
-      %li= link_to "电影", "/dianying/all"
-      %li= link_to "生活", "/shenghuo/all"
-      %li= link_to "酒店旅游", "/lvyou/all"
+      %li= link_to "今日优惠", root_path, {:class=>"hover"}
+      %li= link_to "美食", category_filter_path(1)
+      %li= link_to "娱乐", category_filter_path(2)
+      %li= link_to "电影", category_filter_path(3)
+      %li= link_to "酒店", category_filter_path(4)
     %ul.user-info
       - if logined?
         %li.name= "欢迎您，#{current_user.name}"
