--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,30 +2,31 @@
   %h3 用户帮助
   %ul
     %li= link_to "常见问题", "/help/faq"
-    %li= link_to "反诈骗公告", "/about/anticheat"
+    /%li= link_to "反诈骗公告", "/about/anticheat"
 .ftbox
   %h3 获取更新
   %ul
-    %li= link_to "邮件订阅", "/maillist/subscribe"
-    %li= link_to "新浪微博", "http://t.sina.com.cn/scige", {:rel=>"nofollow", :target=>"_blank"}
-    %li= link_to "腾讯微博", "http://t.qq.com/sciget", {:rel=>"nofollow", :target=>"_blank"}
+    /%li= link_to "邮件订阅", "/maillist/subscribe"
+    %li= link_to "新浪微博", "http://weibo.com/jilinmei", {:rel=>"nofollow", :target=>"_blank"}
+    %li= link_to "腾讯微博", "http://t.qq.com/jilinmeicom", {:rel=>"nofollow", :target=>"_blank"}
 .ftbox
   %h3 商务合作
   %ul
     %li= link_to "提供优惠信息", "/feedback/seller"
     %li= link_to "验证优惠券", checkcoupon_path
-    %li= link_to "管理后台", admin_products_path
+    - if logined? and admin_user?
+      %li= link_to "管理后台", admin_products_path
 .ftbox
   %h3 公司信息
   %ul
     %li= link_to "关于我们", "/about/"
     %li= link_to "我们承诺", "/commitment/"
-    %li= link_to "加入我们", "/about/job"
+    /%li= link_to "加入我们", "/about/job"
 .ftbox.service
-  %i.hotline
-  %p.desc 客服电话(免长途费)
-  %p.num 400-660-5500
-  %p.time 周一到周日8:00-22:00
+  %h3 客服电话
+  %ul
+    %li 15944279050
+    %li 0432-64822789
 .copyright
   %p
     ©2012 吉林美打折网 jilinmei.com
